[build-system]
requires = [
    "hatchling>=0.13.0",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-plugin-md"
description = "A DataDog Agent Plugin to Monitor Linux Software RAID Arrays"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "md",
    "software raid",
]
authors = [
    { name = "Michelle Pellon", email = "mgracepellon@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/michellepellon/datadog-plugin-md"

[tool.hatch.version]
path = "datadog_checks/md/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/md",
]
dev-mode-dirs = [
    ".",
]
